// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner should match snapshot with custom className 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="inline-block animate-spin rounded-full border-2 border-solid border-current border-r-transparent motion-reduce:animate-[spin_1.5s_linear_infinite] w-8 h-8 test-class"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`LoadingSpinner should match snapshot with default size 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="inline-block animate-spin rounded-full border-2 border-solid border-current border-r-transparent motion-reduce:animate-[spin_1.5s_linear_infinite] w-8 h-8 "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`LoadingSpinner should match snapshot with large size 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="inline-block animate-spin rounded-full border-2 border-solid border-current border-r-transparent motion-reduce:animate-[spin_1.5s_linear_infinite] w-12 h-12 "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`LoadingSpinner should match snapshot with small size 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="inline-block animate-spin rounded-full border-2 border-solid border-current border-r-transparent motion-reduce:animate-[spin_1.5s_linear_infinite] w-4 h-4 "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;
